-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b14
-
x86_64
-
linux
The following two tests failed in the JDK17 CI:
runtime/cds/appcds/VerifierTest_2.java
runtime/cds/appcds/VerifierTest_1A.java
Here's a snippet from the VerifierTest_2.java log file:
----------System.err:(28/1754)----------
stdout: [Error occurred during initialization of VM
Unable to use shared archive.
];
stderr: [An error has occurred while processing the shared archive file.
Specified shared archive not found (/opt/mach5/mesos/work_dir/slaves/a4f8fba9-f017-4328-b286-c66b6a97143d-S8400/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7bf3d6f7-cc0c-471e-8b05-a66076a1f098/runs/d1bb70d8-2a63-484b-8898-b3c0afd1df3c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_appcds_dynamic/scratch/0/appcds-00h11m23s161.jsa).
]
exitValue = 1
java.lang.RuntimeException: 'Hi, how are you?' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:206)
at VerifierTest.checkRuntimeOutput(VerifierTest.java:117)
at VerifierTest.lambda$testset_1$0(VerifierTest.java:226)
at jdk.test.lib.cds.CDSTestUtils$Result.ifNoMappingFailure(CDSTestUtils.java:187)
at VerifierTest.testset_2(VerifierTest.java:306)
at VerifierTest.main(VerifierTest.java:96)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'Hi, how are you?' missing from stdout/stderr
Here's a snippet from the VerifierTest_1A.java log file:
----------System.err:(28/1769)----------
stdout: [Error occurred during initialization of VM
Unable to use shared archive.
];
stderr: [An error has occurred while processing the shared archive file.
Specified shared archive not found (/opt/mach5/mesos/work_dir/slaves/a4f8fba9-f017-4328-b286-c66b6a97143d-S8400/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7bf3d6f7-cc0c-471e-8b05-a66076a1f098/runs/d1bb70d8-2a63-484b-8898-b3c0afd1df3c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_appcds_dynamic/scratch/1/appcds-00h11m21s670.jsa).
]
exitValue = 1
java.lang.RuntimeException: 'java.lang.VerifyError' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:206)
at VerifierTest.checkRuntimeOutput(VerifierTest.java:117)
at VerifierTest.lambda$testset_1$0(VerifierTest.java:226)
at jdk.test.lib.cds.CDSTestUtils$Result.ifNoMappingFailure(CDSTestUtils.java:187)
at VerifierTest.testset_1(VerifierTest.java:226)
at VerifierTest.main(VerifierTest.java:94)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'java.lang.VerifyError' missing from stdout/stderr
runtime/cds/appcds/VerifierTest_2.java
runtime/cds/appcds/VerifierTest_1A.java
Here's a snippet from the VerifierTest_2.java log file:
----------System.err:(28/1754)----------
stdout: [Error occurred during initialization of VM
Unable to use shared archive.
];
stderr: [An error has occurred while processing the shared archive file.
Specified shared archive not found (/opt/mach5/mesos/work_dir/slaves/a4f8fba9-f017-4328-b286-c66b6a97143d-S8400/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7bf3d6f7-cc0c-471e-8b05-a66076a1f098/runs/d1bb70d8-2a63-484b-8898-b3c0afd1df3c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_appcds_dynamic/scratch/0/appcds-00h11m23s161.jsa).
]
exitValue = 1
java.lang.RuntimeException: 'Hi, how are you?' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:206)
at VerifierTest.checkRuntimeOutput(VerifierTest.java:117)
at VerifierTest.lambda$testset_1$0(VerifierTest.java:226)
at jdk.test.lib.cds.CDSTestUtils$Result.ifNoMappingFailure(CDSTestUtils.java:187)
at VerifierTest.testset_2(VerifierTest.java:306)
at VerifierTest.main(VerifierTest.java:96)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'Hi, how are you?' missing from stdout/stderr
Here's a snippet from the VerifierTest_1A.java log file:
----------System.err:(28/1769)----------
stdout: [Error occurred during initialization of VM
Unable to use shared archive.
];
stderr: [An error has occurred while processing the shared archive file.
Specified shared archive not found (/opt/mach5/mesos/work_dir/slaves/a4f8fba9-f017-4328-b286-c66b6a97143d-S8400/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7bf3d6f7-cc0c-471e-8b05-a66076a1f098/runs/d1bb70d8-2a63-484b-8898-b3c0afd1df3c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_appcds_dynamic/scratch/1/appcds-00h11m21s670.jsa).
]
exitValue = 1
java.lang.RuntimeException: 'java.lang.VerifyError' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:206)
at VerifierTest.checkRuntimeOutput(VerifierTest.java:117)
at VerifierTest.lambda$testset_1$0(VerifierTest.java:226)
at jdk.test.lib.cds.CDSTestUtils$Result.ifNoMappingFailure(CDSTestUtils.java:187)
at VerifierTest.testset_1(VerifierTest.java:226)
at VerifierTest.main(VerifierTest.java:94)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:566)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: 'java.lang.VerifyError' missing from stdout/stderr
- relates to
-
JDK-8261937 LambdaForClassInBaseArchive: SimpleApp$$Lambda$1 missing
-
- Resolved
-